--- a/conf/as3/structure/build.properties
+++ b/conf/as3/structure/build.properties
@@ -16,11 +16,15 @@ libpath = lib
 # The Location of the output folder for your generated documents
 docsoutputfolder = asdoc
 
+# The location of the test sources
+testsourcepath = ./test/main/as3
+
 # Home directory for flex sdk 3, change this to build for Mac or PC using # as comment
 # SDK_HOME = C:/Program Files/Adobe/Flash Builder 4/sdks/3.5.0
 # SDK_HOME = /Applications/Adobe Flash Builder 4/sdks/3.5.0
 # SDK_HOME = /usr/local/flex_sdk_4.1.0/
 # FLEX_HOME = /usr/local/flex_sdk_4.1.0/
+FLEX4_SDK_HOME = /Applications/Adobe Flash Builder 4/sdks/4.1.0/
 
 # The location of your asdoc.exe, change this to build for Mac or PC using # as comment
 #asdoc.exe = C:/Program Files/Adobe/Flash Builder 4/sdks/3.5.0/bin/asdoc.exe
