added gpg plugin

--- a/pom.xml
+++ b/pom.xml
@@ -156,6 +156,14 @@
           </execution>
         </executions>
       </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-gpg-plugin</artifactId>
+          <configuration>
+            <releaseProfiles>release</releaseProfiles>
+            <goals>sign</goals>
+          </configuration>
+        </plugin>
     </plugins>
   </build>
   <reporting>
