--- a/pom.xml
+++ b/pom.xml
@@ -155,8 +155,8 @@
         </executions>
       </plugin>
     </plugins>
-  </build>
-  <pluginManagement>
+    <pluginManagement>
+      <plugins>
           <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-gpg-plugin</artifactId>
@@ -165,7 +165,9 @@
             <goals>sign</goals>
           </configuration>
         </plugin>
-  </pluginManagement>
+      </plugins>
+    </pluginManagement>
+  </build>
   <profiles>
     <profile>
       <id>release-profile</id>
