update ignored files to add generated-code, python compilcation results

--- a/.gitignore
+++ b/.gitignore
@@ -9,9 +9,12 @@ version.properties
 lib/*
 build/*
 generated-files/*
+generated-code/*
 *.swp
 *.swo
 
 /target
 /generated-files
 /nbactions.xml
+*.pyc
+__pycache__
