--- a/pom.xml
+++ b/pom.xml
@@ -40,12 +40,6 @@
     <system>github</system>
     <url>https://github.com/wordnik/swagger-codegen/issues</url>
   </issueManagement>
-  <mailingLists>
-    <mailingList>
-      <name>swagger-swaggersocket</name>
-      <archive>https://groups.google.com/forum/#!forum/swagger-swaggersocket</archive>
-    </mailingList>
-  </mailingLists>
   <licenses>
     <license>
       <name>Apache License 2.0</name>
@@ -220,9 +214,14 @@
       <version>${junit-version}</version>
       <scope>test</scope>
     </dependency>
+<dependency>
+  <groupId>org.json4s</groupId>
+  <artifactId>json4s-jackson_2.9.1</artifactId>
+  <version>3.0.0-SNAPSHOT</version>
+</dependency>
   </dependencies>
   <properties>
-    <swagger-core-version>1.1.0</swagger-core-version>
+    <swagger-core-version>1.1.1-SNAPSHOT</swagger-core-version>
     <scala-version>2.9.1-1</scala-version>
     <junit-version>4.8.1</junit-version>
     <maven-plugin.version>1.0.0</maven-plugin.version>
