--- a/samples/client/petstore/java/pom.xml
+++ b/samples/client/petstore/java/pom.xml
@@ -213,7 +213,7 @@
 
 	<properties>
     <jersey-version>1.7</jersey-version>
-    <swagger-core-version>1.02-SNAPSHOT</swagger-core-version>
+    <swagger-core-version>1.1.0</swagger-core-version>
 		<scala-version>2.9.1-1</scala-version>
 		<junit-version>4.8.1</junit-version>
 		<maven-plugin.version>1.0.0</maven-plugin.version>
