--- a/pom.xml
+++ b/pom.xml
@@ -134,9 +134,9 @@
         </configuration>
       </plugin>
       <plugin>
-        <groupId>org.scala-tools</groupId>
-        <artifactId>maven-scala-plugin</artifactId>
-        <version>2.15.2</version>
+        <groupId>net.alchim31.maven</groupId>
+        <artifactId>scala-maven-plugin</artifactId>
+        <version>3.0.1</version>
         <executions>
           <execution>
             <id>scala-compile-first</id>
@@ -166,8 +166,8 @@
   <reporting>
     <plugins>
       <plugin>
-        <groupId>org.scala-tools</groupId>
-        <artifactId>maven-scala-plugin</artifactId>
+        <groupId>net.alchim31.maven</groupId>
+        <artifactId>scala-maven-plugin</artifactId>
         <configuration>
           <scalaVersion>${scala-version}</scalaVersion>
         </configuration>
@@ -175,12 +175,12 @@
     </plugins>
   </reporting>
   <dependencies>
-    <dependency>
+    <!--dependency>
       <groupId>com.wordnik</groupId>
       <artifactId>swagger-core_2.9.1</artifactId>
       <version>${swagger-core-version}</version>
       <scope>compile</scope>
-    </dependency>
+    </dependency-->
     <dependency>
       <groupId>commons-io</groupId>
       <artifactId>commons-io</artifactId>
@@ -214,13 +214,32 @@
       <version>${junit-version}</version>
       <scope>test</scope>
     </dependency>
-<dependency>
-  <groupId>org.json4s</groupId>
-  <artifactId>json4s-jackson_2.9.1</artifactId>
-  <version>3.0.0-SNAPSHOT</version>
-</dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.module</groupId>
+      <artifactId>jackson-module-scala</artifactId>
+      <version>2.0.0</version>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-annotations</artifactId>
+      <version>${jackson-version}</version>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.jaxrs</groupId>
+      <artifactId>jackson-jaxrs-json-provider</artifactId>
+      <version>2.0.0</version>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.json4s</groupId>
+      <artifactId>json4s-jackson_2.9.1</artifactId>
+      <version>3.0.0-SNAPSHOT</version>
+    </dependency>
   </dependencies>
   <properties>
+    <jackson-version>2.0.4</jackson-version>
     <swagger-core-version>1.1.1-SNAPSHOT</swagger-core-version>
     <scala-version>2.9.1-1</scala-version>
     <junit-version>4.8.1</junit-version>
