--- a/pom.xml
+++ b/pom.xml
@@ -136,7 +136,7 @@
       <plugin>
         <groupId>net.alchim31.maven</groupId>
         <artifactId>scala-maven-plugin</artifactId>
-        <version>3.0.1</version>
+        <version>3.1.0</version>
         <executions>
           <execution>
             <id>scala-compile-first</id>
@@ -159,6 +159,7 @@
             <jvmArg>-Xms128m</jvmArg>
             <jvmArg>-Xmx1500m</jvmArg>
           </jvmArgs>
+          <recompileMode>incremental</recompileMode>
         </configuration>
       </plugin>
     </plugins>
