--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <parent>
     <groupId>org.sonatype.oss</groupId>
     <artifactId>oss-parent</artifactId>
@@ -10,7 +9,7 @@
   <artifactId>swagger-codegen_2.9.1</artifactId>
   <packaging>jar</packaging>
   <name>swagger-codegen</name>
-  <version>2.0.0-SNAPSHOT</version>
+  <version>2.0.0</version>
   <scm>
     <connection>scm:git:git@github.com:wordnik/swagger-codegen.git</connection>
     <developerConnection>scm:git:git@github.com:wordnik/swagger-codegen.git</developerConnection>
@@ -232,11 +231,6 @@
       <artifactId>jackson-jaxrs-json-provider</artifactId>
       <version>2.0.0</version>
       <scope>compile</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.json4s</groupId>
-      <artifactId>json4s-jackson_2.9.1</artifactId>
-      <version>3.0.0-SNAPSHOT</version>
     </dependency>
   </dependencies>
   <properties>
