--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   <artifactId>swagger-codegen_2.9.1</artifactId>
   <packaging>jar</packaging>
   <name>swagger-codegen</name>
-  <version>2.0.1-SNAPSHOT</version>
+  <version>2.0.1</version>
   <scm>
     <connection>scm:git:git@github.com:wordnik/swagger-codegen.git</connection>
     <developerConnection>scm:git:git@github.com:wordnik/swagger-codegen.git</developerConnection>
