fixed string bug

--- a/samples/client/wordnik-api/scala/pom.xml
+++ b/samples/client/wordnik-api/scala/pom.xml
@@ -5,11 +5,17 @@
   <artifactId>swagger-client</artifactId>
   <packaging>jar</packaging>
   <name>swagger-client</name>
-  <version>1.0</version>
+  <version>1.0.0</version>
   <prerequisites>
     <maven>2.2.0</maven>
   </prerequisites>
-
+  <distributionManagement>
+    <repository>
+      <id>com.wordnik</id>
+      <name>wordnik-ci-aws</name>
+      <url>https://ci.aws.wordnik.com/artifactory/m2-snapshots/</url>
+    </repository>
+  </distributionManagement>
   <pluginRepositories>
     <pluginRepository>
       <id>scala-tools.org</id>
