--- a/samples/server-generator/java-jaxrs/output/src/main/webapp/WEB-INF/web.xml
+++ b/samples/server-generator/java-jaxrs/output/src/main/webapp/WEB-INF/web.xml
@@ -41,14 +41,13 @@
     <servlet-name>jersey</servlet-name>
     <url-pattern>/*</url-pattern>
   </servlet-mapping>
-<!--  <filter>
+  <filter>
     <filter-name>ApiOriginFilter</filter-name>
-    <filter-class>com.wordnik.swagger.sample.util.ApiOriginFilter</filter-class>
+    <filter-class>com.wordnik.api.ApiOriginFilter</filter-class>
   </filter>
   <filter-mapping>
     <filter-name>ApiOriginFilter</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
--->
 </web-app>
 
