--- a/pom.xml
+++ b/pom.xml
@@ -382,7 +382,12 @@
       <artifactId>commons-lang</artifactId>
       <version>${commons-lang-version}</version>
       <scope>compile</scope>
-    </dependency>      
+    </dependency>
+    <dependency>
+      <groupId>commons-cli</groupId>
+      <artifactId>commons-cli</artifactId>
+      <version>${commons-cli-version}</version>
+    </dependency>
     <dependency>
       <groupId>org.scalatest</groupId>
       <artifactId>scalatest_2.11</artifactId>
@@ -402,6 +407,7 @@
     <swagger-core-version>1.5.0-SNAPSHOT</swagger-core-version>
     <scala-test-version>2.1.4</scala-test-version>
     <commons-io-version>2.3</commons-io-version>
+    <commons-cli-version>1.2</commons-cli-version>
 
     <junit-version>4.8.1</junit-version>
     <maven-plugin-version>1.0.0</maven-plugin-version>
