--- a/pom.xml
+++ b/pom.xml
@@ -191,7 +191,7 @@
         <artifactId>maven-release-plugin</artifactId>
         <version>2.1</version>
       </plugin>
-    </plugins>
+          </plugins>
     <pluginManagement>
       <plugins>
         <plugin>
@@ -290,6 +290,51 @@
         </plugins>
       </build>
     </profile>
+    <profile>
+      <id>gen-scalatra</id>
+      <activation>
+        <property>
+          <name>template</name>
+          <value>scalatra</value>
+        </property>
+      </activation>
+      <build>
+        <defaultGoal>compile exec:java</defaultGoal>
+        <plugins>
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>exec-maven-plugin</artifactId>
+            <version>1.3.2</version>
+            <executions>
+              <execution>
+                <goals>
+                  <goal>java</goal>
+                </goals>
+              </execution>
+            </executions>
+            <configuration>
+              <executable>java</executable>
+              <mainClass>com.wordnik.swagger.codegen.Codegen</mainClass>
+              <arguments>
+                <argument>-l</argument>
+                <argument>scalatra</argument>
+                <argument>-i</argument>
+                <argument>${swagger-spec}</argument>
+                <argument>-t</argument>
+                <argument>${swagger-template}</argument>
+                <argument>-o</argument>
+                <argument>${swagger-out}</argument>
+              </arguments>
+            </configuration>
+        </plugin>
+      </plugins>
+    </build>
+    <properties>
+      <swagger-spec>samples/yaml/echo.yaml</swagger-spec>
+      <swagger-template>src/main/resources/scalatra</swagger-template>
+      <swagger-out>generated-code/scalatra</swagger-out>
+    </properties>
+  </profile>
   </profiles>
   <reporting>
     <outputDirectory>target/site</outputDirectory>
@@ -342,7 +387,6 @@
       <version>${swagger-core-version}</version>
       <scope>compile</scope>
     </dependency>
-
     <dependency>
       <groupId>com.samskivert</groupId>
       <artifactId>jmustache</artifactId>
@@ -408,7 +452,6 @@
     <scala-test-version>2.1.4</scala-test-version>
     <commons-io-version>2.3</commons-io-version>
     <commons-cli-version>1.2</commons-cli-version>
-
     <junit-version>4.8.1</junit-version>
     <maven-plugin-version>1.0.0</maven-plugin-version>
     <commons-lang-version>2.4</commons-lang-version>
