--- a/pom.xml
+++ b/pom.xml
@@ -338,6 +338,12 @@
   <dependencies>
     <dependency>
       <groupId>${project.groupId}</groupId>
+      <artifactId>swagger-parser</artifactId>
+      <version>${swagger-parser-version}</version>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>${project.groupId}</groupId>
       <artifactId>swagger-core</artifactId>
       <version>${swagger-core-version}</version>
       <scope>compile</scope>
@@ -401,6 +407,7 @@
     </dependency>
   </dependencies>
   <properties>
+    <swagger-parser-version>1.0.0-SNAPSHOT</swagger-parser-version>
     <scala-version>2.11.1</scala-version>
     <felix-version>2.3.4</felix-version>
     <swagger-core-version>1.5.0-SNAPSHOT</swagger-core-version>
