--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,18 @@
     <finalName>${project.artifactId}-${project.version}</finalName>
     <plugins>
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <configuration>
+          <archive>
+            <manifest>
+              <addClasspath>true</addClasspath>
+              <mainClass>com.wordnik.swagger.codegen.Codegen</mainClass>
+            </manifest>
+          </archive>
+        </configuration>
+      </plugin>
+      <plugin>
         <artifactId>maven-dependency-plugin</artifactId>
         <executions>
           <execution>
@@ -343,7 +355,7 @@
       <scope>compile</scope>
     </dependency>
     <dependency>
-      <groupId>${project.groupId}</groupId>
+      <groupId>io.swagger</groupId>
       <artifactId>swagger-legacy-spec-parser</artifactId>
       <version>${swagger-parser-version}</version>
       <scope>compile</scope>
