--- a/samples/server/petstore/jaxrs/pom.xml
+++ b/samples/server/petstore/jaxrs/pom.xml
@@ -1,10 +1,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>{{groupId}}</groupId>
-  <artifactId>{{artifactId}}</artifactId>
+  <groupId>io.swagger</groupId>
+  <artifactId>swagger-server</artifactId>
   <packaging>jar</packaging>
-  <name>{{artifactId}}</name>
-  <version>{{artifactVersion}}</version>
+  <name>swagger-server</name>
+  <version>1.0.0</version>
   <build>
     <sourceDirectory>src/main/java</sourceDirectory>
     <plugins>
@@ -31,7 +31,7 @@
         <version>${jetty-version}</version>
         <configuration>
           <webAppConfig>
-            <contextPath>{{^basePath}}/{{/basePath}}{{#basePath}}{{basePath}}{{/basePath}}</contextPath>
+            <contextPath>/v2</contextPath>
           </webAppConfig>
           <webAppSourceDirectory>target/${project.artifactId}-${project.version}</webAppSourceDirectory>
           <webDefaultXml>${project.basedir}/conf/jetty/webdefault.xml</webDefaultXml>
