--- a/modules/swagger-generator/pom.xml
+++ b/modules/swagger-generator/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>com.wordnik</groupId>
     <artifactId>swagger-codegen-project</artifactId>
-    <version>2.1.0-M1</version>
+    <version>2.1.1-M1-SNAPSHOT</version>
     <relativePath>../..</relativePath>
   </parent>
   <groupId>com.wordnik</groupId>
