adds tests, fixes for java templates

--- a/pom.xml
+++ b/pom.xml
@@ -288,6 +288,7 @@
       </activation>
       <modules>
         <module>samples/client/petstore/objc</module>
+        <module>samples/client/petstore/java</module>
       </modules>
     </profile>
   </profiles>
