added excludes for logback.xml per https://github.com/swagger-api/swagger-codegen/issues/689

--- a/modules/swagger-codegen-cli/pom.xml
+++ b/modules/swagger-codegen-cli/pom.xml
@@ -15,6 +15,14 @@
 
     <build>
         <finalName>swagger-codegen-cli</finalName>
+        <resources>
+          <resource>
+            <directory>src/main/resources</directory>
+            <excludes>
+              <exclude>logback.xml</exclude>
+            </excludes>
+          </resource>
+        </resources>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
